# SUU-Studio

./: .gitignore  LICENSE  README.md  Setup-Android.bat  Setup.bat  ThirdParty.md  setup-android.sh  setup-linux.sh
.github/workflows/: android.yml  linux.yml  windows.yml
Android/AndroidStudio/SUU-Runtime/: settings.gradle
Android/AndroidStudio/SUU-Runtime/app/: build.gradle
Android/AndroidStudio/SUU-Runtime/app/src/androidTest/java/com/suu_games/suu_runtime/: ExampleInstrumentedTest.java
Android/AndroidStudio/SUU-Runtime/app/src/main/: AndroidManifest.xml
Android/AndroidStudio/SUU-Runtime/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Android/AndroidStudio/SUU-Runtime/app/src/main/cpp/static_library/: CMakeLists.txt
Android/AndroidStudio/SUU-Runtime/app/src/main/cpp/tests/: CMakeLists.txt
Android/AndroidStudio/SUU-Runtime/app/src/main/java/com/suu_games/suu_runtime/: MainActivity.java
Android/AndroidStudio/SUU-Runtime/app/src/main/res/values/: strings.xml  themes.xml
Android/AndroidStudio/SUU-Runtime/app/src/main/res/values-night/: themes.xml
Android/AndroidStudio/SUU-Runtime/app/src/test/java/com/suu_games/suu_runtime/: ExampleUnitTest.java
Android/AndroidStudio/SUU-Runtime/gradle/wrapper/: gradle-wrapper.properties
Linux/: CMakeLists.txt  build-linux.sh
Remote/: Generate.bat  GenerateAll.bat  RuntimeCapture.proto  generate-android.sh  generate-linux.sh
Remote/CSharp/: Hello.cs  HelloGrpc.cs
SUU-Runtime-Test/source/Test-Platform/Android/: SUU-Runtime-Test-Android.cpp
SUU-Runtime-Test/source/Test-Platform/Linux/: SUU-Runtime-Test-Linux.cpp
SUU-Runtime-Test/source/Test-Platform/WindowsDesktop/: SUU-Runtime-Test-Windows.cpp  pch.cpp
SUU-Runtime/include/SUU-Runtime/: SUU-Runtime.hpp
SUU-Runtime/include/SUU-Runtime/Remote/: Hello.hpp  RuntimeCapture.hpp
SUU-Runtime/source/Runtime-Platform/Android/: SUU-Runtime-Android.cpp
SUU-Runtime/source/Runtime-Platform/Android/Remote/: Hello.pb.cc  Hello.pb.h
SUU-Runtime/source/Runtime-Platform/Linux/: Main.cpp  SUU-Runtime-Linux.cpp
SUU-Runtime/source/Runtime-Platform/Linux/Remote/: RuntimeCapture.pb.cc  RuntimeCapture.pb.h
SUU-Runtime/source/Runtime-Platform/WindowsDesktop/: Main.cpp
SUU-Runtime/source/Runtime-Platform/WindowsDesktop/Remote/: Hello.grpc.pb.cc  Hello.pb.cc  Hello.pb.h  RuntimeCapture.grpc.pb.cc  RuntimeCapture.pb.h
SUU-Runtime/source/Runtime-Platform/WindowsDesktop/Windows/: SUU-Runtime-Windows.cpp
SUU-Runtime/source/Runtime/Remote/: Generate.bat  Hello.grpc.pb.h  Hello.pb.h  HelloTest.cpp  RuntimeCapture.cpp
WindowsDesktop/: setup.bat
WindowsDesktop/VisualStudio2022/SUU-Runtime/: SUU-Runtime.sln
WindowsDesktop/VisualStudio2022/SUU-Runtime/SUU-Runtime/: SUU-Runtime.vcxproj  SUU-Runtime.vcxproj.filters
WindowsDesktop/VisualStudio2022/SUU-Runtime/SUU-Runtime-Static/: SUU-Runtime-Static.vcxproj  SUU-Runtime-Static.vcxproj.filters
WindowsDesktop/VisualStudio2022/SUU-Runtime/SUU-Runtime-Test/: SUU-Runtime-Test.vcxproj  SUU-Runtime-Test.vcxproj.filters
WindowsDesktop/VisualStudio2022/SUU-Studio/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  SUU-Studio.csproj  SUU-Studio.sln
WindowsDesktop/VisualStudio2022/SUU-Studio/Remote/: Hello.cs  HelloGrpc.cs  HelloServer.cs  RuntimeCapture.cs  RuntimeCaptureGrpc.cs  RuntimeCaptureService.cs
WindowsDesktop/VisualStudio2022/SUU-Studio/UI/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
WindowsDesktop/VisualStudio2022/SUU-Studio/ViewModel/: RuntimeCaptureImage.cs
